formatação de texto

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://pk-hue.github.io/a-pergunta",
-  "name": "lista-de-taresfas",
+  "name": "a-pergunta",
   "name": "question",
   "private": true,
   "version": "0.0.0",
